--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,9 +8,9 @@ title: Timothy Voice
   <div class="row">
     <div id="splash" class="small-12 medium-12 large-12 columns branding">
       <div class="fixer">
-        <div class="branding-intro small-12 medium-8 large-8 columns">
+        <div class="branding-intro small-12 medium-4 large-4 columns">
         <h1 class="branding-title">
-          Timothy Voice
+          Timothy<br>Voice
         </h1>
         <p class="branding-byline">
           concept code content
@@ -28,7 +28,7 @@ title: Timothy Voice
         <div class="row projects-ggs">
           <div class="projects-single">
             <div class="projects-single-container clearfix">
-              <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
+              <div class="show-for-medium-up medium-5 large-5 columns projects-summary">
                 <h3 class="projects-single-title">
                   Great Green Sources
                 </h3>
@@ -37,7 +37,7 @@ title: Timothy Voice
                 </p>
                 <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
               </div><!-- projects-summary -->
-              <div class="small-12 medium-8 large-8 columns projects-single-image">
+              <div class="small-12 medium-7 large-7 columns projects-single-image">
                 <%= image_tag 'greatgreensources_color_mockup.png'  %> 
               </div>
             </div>
@@ -51,7 +51,7 @@ title: Timothy Voice
         <div class="row projects-octavejournal">
           <div class="projects-single">
             <div class="projects-single-container clearfix">
-              <div class="show-for-medium-up medium-4 large-4 columns projects-summary">
+              <div class="show-for-medium-up medium-5 large-5 columns projects-summary">
                 <h3 class="projects-single-title">
                   Octave Journal
                 </h3>
@@ -60,7 +60,7 @@ title: Timothy Voice
                 </p>
                 <%= link_to 'View Project', '/octavejournal.html', :relative => true, :class => "small secondary button" %>
               </div><!-- projects-summary -->
-              <div class="small-12 medium-8 large-8 columns projects-single-image">
+              <div class="small-12 medium-7 large-7 columns projects-single-image">
                 <%= image_tag 'octavejournal_color_mockup.png'  %> 
               </div>
             </div>
