--- a/source/octavejournal.html.erb
+++ b/source/octavejournal.html.erb
@@ -29,17 +29,15 @@ images:
 
 <div class="branding-band">
   <div class="row">
-    <div id="splash" class="small-12 medium-12 large-12 columns project ggs">
-      <div class="fixer">
+    <div id="" class="small-12 medium-12 large-12 columns project ggs">
         <div class="small-12 medium-6 large-4 columns alpha project-description">
           <h1 class="project-title">
           Octave <br> Journal
         </h1>
         <p class="project-intro">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, natus libero sint aliquam officiis quis illo itaque fugiat harum voluptas optio ullam consectetur atque voluptatum laborum ratione mollitia accusantium consequatur doloribus praesentium? Assumenda eaque suscipit perferendis pariatur nemo rem quidem nulla veritatis blanditiis. Blanditiis aspernatur distinctio reiciendis. Sit, error vel.
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, minima, aspernatur. Nihil, ducimus itaque quibusdam ullam dolore pariatur repellat nesciunt.
         </p>
         </div><!-- project-description -->
-      </div><!-- fixer -->
     </div><!-- splash -->
   </div><!-- row -->
 </div><!-- branding-band -->
@@ -91,3 +89,4 @@ images:
     </div><!-- detail-container -->
   </div><!-- row -->
 </div><!-- detail -->
+
