removed about section, added project info

--- a/source/ggs.html.erb
+++ b/source/ggs.html.erb
@@ -33,7 +33,7 @@ images:
           Great <br> Green <br> Sources
         </h1>
         <p class="project-intro">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, debitis odio non obcaecati officiis enim beatae aliquam magnam vel consequatur!
+          How do you design a platform that best supports a business built around relationships?
         </p>
         </div><!-- project-description -->
     </div><!-- project -->
@@ -49,7 +49,7 @@ images:
       <div class="item">
         <div class="mockup-image small-12 columns">
           <div class="small-12 medium-10 large-10 columns medium-centered">
-            <%= image_tag f  %>
+            <%= image_tag f %>
           </div>
         </div><!-- mockup-image -->
       </div><!-- item -->
@@ -64,7 +64,10 @@ images:
     <div class="small-12 columns detail-container">
       <div class="small-12 medium-5 large-5 columns alpha">
         <p class="detail-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, pariatur, quod doloribus repellat neque ullam placeat magni cum inventore nostrum dignissimos atque nesciunt perferendis? Veniam, odit, rem, nemo obcaecati autem a laudantium atque quis illum vitae minima eaque cupiditate explicabo qui optio libero tenetur debitis fugit suscipit modi. Ipsam, vitae?
+          Great Green Sources is a nationwide wholesale nursery distributor built on creating and maintaining close personal relationships. Part of that process is providing timely information on product availabilities, and introducing customers to a hand picked list of vendors and their products. 
+        </p>
+        <p class="detail-text">
+          Mobility is a key feature of the site, as Great Green Sources customers are rarely at a desktop. Thus, the site was designed with a mobile first approach, interchanging content based on the context and seeking to provide the most relevant info to visitors depending on several assumptions about their needs in different contexts. 
         </p>
       </div>
       <div class="small-12 medium-5 large-5 columns detail-tech alpha">
@@ -83,8 +86,6 @@ images:
         <% current_page.data.link.each do |f| %>
           <div class="small button secondary inactive">Under Construction</div>
         <% end %>
-        <p class="detail-notes">* note you will need credentials to access this site
-          <br> username: guest <br> password: guest</p>
       </div>
     </div><!-- detail-container -->
   </div><!-- row -->
