--- a/source/octavejournal.html.erb
+++ b/source/octavejournal.html.erb
@@ -15,7 +15,7 @@ phases:
   - Content
 
 source:
-  - https://github.com/timsvoice/octavejournal
+  - https://github.com/timsvoice/living_octave_research
 
 link:
   - http://www.octavejournal.com
@@ -35,7 +35,7 @@ images:
           Octave <br> Journal
         </h1>
         <p class="project-intro">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, minima, aspernatur. Nihil, ducimus itaque quibusdam ullam dolore pariatur repellat nesciunt.
+          How do you create a common organizational language for dispersed team of designers, development officers, hospitality managers and corporate leaders? 
         </p>
         </div><!-- project-description -->
     </div><!-- splash -->
@@ -64,13 +64,16 @@ images:
     <div class="small-12 columns detail-container">
       <div class="small-12 medium-5 large-5 columns alpha">
         <p class="detail-text">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, pariatur, quod doloribus repellat neque ullam placeat magni cum inventore nostrum dignissimos atque nesciunt perferendis? Veniam, odit, rem, nemo obcaecati autem a laudantium atque quis illum vitae minima eaque cupiditate explicabo qui optio libero tenetur debitis fugit suscipit modi. Ipsam, vitae?
+          The Octave Journal serves as a core knowledge base for a geographically dispersed team. The Journal is organized around issues; groups of content that are loosely related to each other but form a unit for distribution. Contributions are sourced from around the organization and edited by a core team based in Shanghai and New York.           
+        </p>
+        <p class="detail-text">
+          Key to the success of the project was to have a robust, private platform to support a periodic email publication designed to drive readers to the site. We quickly learned that brevity is the best policy when it comes to driving traffic and consistently drove up our readership numbers with adjustments to design and userflows based on Mailchimp and Google Analytics data.
         </p>
       </div>
       <div class="small-12 medium-5 large-5 columns detail-tech alpha">
-        <% current_page.data.phases.each do |f| %>
+        <% current_page.data.phases.each do |f| %>          
           <p class="detail-tech-phases"><%= f %></p>
-          <% end %>
+        <% end %>
 
         <ul class="detail-tech-list tags clearfix">          
           <% current_page.data.tech.each do |f| %>
