--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -5,7 +5,7 @@
 .branding-title {
   margin-bottom: 0;
   font-family: $body-font;
-  font-size: 5.5rem;
+  font-size: 6rem;
   line-height: 6rem;
   font-weight: $heavy-text;
   text-align: right;
@@ -22,11 +22,23 @@
 }
 
 .branding-byline {
-  font-size: 2.3rem;
+  font-size: 2.55rem;
   font-weight: $light-text;
   text-align: right;
   @media only screen and (max-width: 40em) { 
     font-size: 1.41rem;
+  }
+}
+
+.branding-summary {
+  font-family: $body-font;
+  font-weight: $light-text;
+  font-size: 1.1rem;
+  text-align: right;
+  a {
+    color: inherit;
+    font-weight: $medium-text;
+    text-decoration: underline;
   }
 }
 
@@ -63,7 +75,18 @@
   }
 }
 
-// about 
+// contact 
+
+.connect-links {
+  i {
+    font-size: 3rem;
+  }
+}
+
+.connect-text {
+  @extend .projects-single-teaser;
+  color: $black;
+}
 
 .about-title {
   font-size: 4rem;
@@ -82,6 +105,8 @@
 }
 
 .about-feature-summary {
+  font-size: 1.25rem;
+  font-weight: $light-text;
   .bold {
     font-size: 1.25rem;
   }
@@ -113,15 +138,17 @@
 .detail-text {
   font-family: $text-font;
   font-weight: $light-text;
-  font-size: 1.1rem;
+  font-size: 1rem;
 }
 
 .tags > .tag {
+  @extend .detail-text;
   list-style: none;
   display: inline-block;
   float: left;
   margin-right: 0.5rem;
-  text-decoration: underline;
+  color: $dark-gray;
+  font-weight: $light-text;
   a {
     color: inherit;
   }
