--- a/source/_about.erb
+++ b/source/_about.erb
@@ -1,51 +1,28 @@
 <div id="about" class="about-band">
   <div class="row">
     <div class="small-12 medium-12 large-12 columns about">
-      <div class="small-12 medium-6 large-6 columns about-intro alpha">
+      <div class="small-12 medium-5 columns about-intro alpha">
         <h2 class="about-title">
-        Full Stack <br> Problem Solver
+          You've <br> Got a <br> Problem
         </h2>
         <p class="about-summary">
-          I am equally in engaged every phase of product development from concept to delivery. I find a broad skillset promotes efficiency and builds a foundation for constructive collaboration. 
+          You are looking for a solution and I'd like to help. I am a designer/developer based in Brooklyn, New York passionate about clean readable code powering clean, readable content.  
         </p>
       </div><!-- about-intro -->
 
       <div class="row about-tools">
           <div class="small-12 medium-12 large-12 columns">
-            <ul class="small-block-grid-1 medium-block-grid-3  about-tool-list">
-              <li class="about-feature">
-                <h3 class="about-feature-title">Concept</h3>
-                <p class="about-feature-summary">
-                  <span class="bold">
-                    You've got a problem.
-                  </span> 
-                  <br>
-                  If you don't fully understand the problem or need, then you can't produce a solution.
-                  Definitions, constraints and testing are crucial to success.
-                </p>
-              </li>                          
-              <li class="about-code">
-                <h3 class="about-feature-title">Code</h3>
-                <p class="about-feature-summary">
-                  <span class="bold">
-                    Let's build a solution.
-                  </span>
-                  <br>
-                  Start with a lo-fi solution for testing and bring on the pixel perfection. HTML/Sass/JS are our weapons of choice for creating responsive digital gems.    
-                </p>
-              </li>
-              <li class="about-content">
-              <h3 class="about-feature-title">Content</h3>
-                <p class="about-feature-summary">
-                  <span class="bold">
-                    And bring it to life.
-                  </span>
-                  <br>
-                  Wireup the frontend and lets get you talking to your customers. Sometimes we'll need a heavyweight like Wordpress, and sometimes a simple static site will do. 
-                </p>
-              </li>
+            <p class="about-feature-summary">
+            
 
-            </ul>
+
+
+              Web/apps should be created around users. They should be clear, navigable, compelling, and responsive.  
+
+              I care very much about presenting users with a consistent experience across devises and contexts because content needs to be accessible and portable. 
+              You need a solution that just works and will continue to work. My code is modular, syntactic and clean so you can either completely forget about it, or dig in and easily understand whats going on.      
+              If you are interested in my process, then the <a href="3">Playbook</a> section will tell you what you need to know. 
+            </p>
           </div>
         </div>
 
