--- a/source/_navigation.erb
+++ b/source/_navigation.erb
@@ -10,7 +10,7 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
-    <li>
+    <!-- <li>
       <a href="#">
         <i class="ion-social-github"></i>      
       </a>
@@ -24,9 +24,9 @@
       <a href="#">
         <i class="ion-ios7-email"></i>
       </a>
-    </li>
+    </li> -->
     <li><a href="#">projects</a></li>
-    <li><a href="#">about</a></li>
+    <li><a href="#">connect</a></li>
     <li class="divider"></li>
     <li><a href="#">playbook</a></li>
   </ul>
