Added JS implementation of hiding the nav bar on scroll down

--- a/source/_navigation.erb
+++ b/source/_navigation.erb
@@ -1,4 +1,4 @@
-<div class="bottom-fixed">
+<header class="bottom-fixed nav-up">
   <nav class="top-bar" data-topbar>
     <ul class="title-area">
       <li class="name">
@@ -38,4 +38,4 @@
       </ul>
     </section>
   </nav>
-</div><!-- bottom-fixed -->
+</header><!-- bottom-fixed -->
