Added anchor smooth scrolling

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,7 +27,7 @@ title: Timothy Voice
 
 
     
-    <div class="projects-ggs-band clearfix">
+    <div id="projects" class="projects-ggs-band clearfix">
       <div class="small-12 medium-12 large-12 columns projects-container ggs">
         <div class="row projects-ggs">
           <div class="projects-single">
@@ -73,7 +73,7 @@ title: Timothy Voice
       </div><!-- projects-container -->
     </div><!-- projects-octavejournal-band -->
     
-    <div class="connect-band">
+    <div id="connect" class="connect-band">
       <div class="row">
         <div class="small-12 medium-5 columns connect-links">
           <p class="connect-text">
