--- a/source/_navigation.erb
+++ b/source/_navigation.erb
@@ -25,8 +25,8 @@
         <i class="ion-ios7-email"></i>
       </a>
     </li> -->
-    <li><a href="#">projects</a></li>
-    <li><a href="#">connect</a></li>
+    <li><a href="#projects">projects</a></li>
+    <li><a href="#connect">connect</a></li>
     <li class="divider"></li>
     <li><a href="#">playbook</a></li>
   </ul>
