consolidated projects and cleaned up typography

--- a/source/octavejournal.html.erb
+++ b/source/octavejournal.html.erb
@@ -64,13 +64,13 @@ images:
     <div class="small-12 columns detail-container">
       <div class="small-12 medium-5 large-5 columns alpha">
         <p class="detail-text">
-          The Octave Journal serves as a core knowledge base for a geographically dispersed team. The Journal is organized around issues; groups of content that are loosely related to each other but form a unit for distribution. Contributions are sourced from around the organization and edited by a core team based in Shanghai and New York.           
+          The Octave Journal serves as a core knowledge base for a geographically dispersed team. The Journal is organized around issues and Contributions are sourced from around the organization and edited by a core team based in Shanghai and New York. 
         </p>
         <p class="detail-text">
-          Key to the success of the project was to have a robust, private platform to support a periodic email publication designed to drive readers to the site. We quickly learned that brevity is the best policy when it comes to driving traffic and consistently drove up our readership numbers with adjustments to design and userflows based on Mailchimp and Google Analytics data.
+          Key to the success of the project was to have a robust, private platform to support a periodic email publication designed to drive readers to the site. We consistently drove up our readership numbers with adjustments to design and userflows based on Mailchimp and Google Analytics data.
         </p>
       </div>
-      <div class="small-12 medium-5 large-5 columns detail-tech alpha">
+      <div class="small-12 medium-5 large-5 columns detail-tech alpha clearfix">
         <% current_page.data.phases.each do |f| %>          
           <p class="detail-tech-phases"><%= f %></p>
         <% end %>
