--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@ title: Timothy Voice
         </p>
         <p class="branding-summary">
           I am a Brooklyn based designer/developer passionate about clean readable code powering clean, readable content. If you would like to know how I work, checkout my <a href="#">Playbook</a>.
-          If you'd like to see my <a href="#">past work</a> read on.
+          If you'd like to see my <a href="#projects">past work</a> read on.
         </p>
       </div><!-- branding-intro -->
       </div>
@@ -26,88 +26,49 @@ title: Timothy Voice
 </div>
 
 
-    
-    <div id="projects" class="projects-ggs-band clearfix">
-      <div class="small-12 medium-12 large-12 columns projects-container ggs">
-        <div class="row projects-ggs">
-          <div class="projects-single">
-            <div class="projects-single-container clearfix">
-              <div class="show-for-medium-up medium-5 large-5 columns projects-summary">
-                <h3 class="projects-single-title">
-                  Great Green Sources
-                </h3>
-                <p class="projects-single-teaser">
-                  Greet Green Sources is a Michigan based wholesale nursery supplier looking to jump start a new business with a clear and simple home base for it's customers. 
-                </p>
-                <%= link_to 'View Project', '/ggs.html', :relative => true, :class => "small secondary button" %>
-              </div><!-- projects-summary -->
-              <div class="small-12 medium-7 large-7 columns projects-single-image">
-                <%= image_tag 'greatgreensources_color_mockup.png'  %> 
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+<div id="projects">
+  
+  <%= partial "ggs" %>
 
-    <div class="projects-octavejournal-band clearfix">
-      <div class="small-12 medium-12 large-12 columns projects-container octavejournal">
-        <div class="row projects-octavejournal">
-          <div class="projects-single">
-            <div class="projects-single-container clearfix">
-              <div class="show-for-medium-up medium-5 large-5 columns projects-summary">
-                <h3 class="projects-single-title">
-                  Octave Journal
-                </h3>
-                <p class="projects-single-teaser">
-                  The Octave Journal is an internal culture platform for an ambitious startup looking to change the way people think about wellness and community.
-                </p>
-                <%= link_to 'View Project', '/octavejournal.html', :relative => true, :class => "small secondary button" %>
-              </div><!-- projects-summary -->
-              <div class="small-12 medium-7 large-7 columns projects-single-image">
-                <%= image_tag 'octavejournal_color_mockup.png'  %> 
-              </div><!-- projects-single-image -->
-            </div><!-- projects-single-container -->
-          </div><!-- projects-single -->
-        </div><!-- projects-octavejournal -->
-      </div><!-- projects-container -->
-    </div><!-- projects-octavejournal-band -->
-    
-    <div id="connect" class="connect-band">
-      <div class="row">
-        <div class="small-12 medium-5 columns connect-links">
-          <p class="connect-text">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, error, quo dolorem vero magnam ea adipisci deleniti maxime facilis doloremque numquam aliquam quos beatae minima nostrum labore autem sapiente distinctio molestiae perspiciatis repellendus nemo amet pariatur porro reprehenderit in soluta.
-          </p>
-          
-              <i class="ion-social-github"></i>      
-            
-              <i class="ion-social-twitter"></i>
-            
-              <i class="ion-ios7-email"></i>
+  <%= partial "octavejournal" %>
 
-        </div>
-        <div class="small-12 medium-5 columns connect-form">
-      
-          <form method="post" action="contactengine.php">
-            <label for="Name">Name:</label>
-            <input type="text" name="Name" id="Name" />
-            
-            <label for="City">City:</label>
-            <input type="text" name="City" id="City" />
-      
-            <label for="Email">Email:</label>
-            <input type="text" name="Email" id="Email" />
-            
-            <label for="Message">Message:</label><br />
-            <textarea name="Message" rows="20" cols="20" id="Message"></textarea>
-
-            <input type="submit" name="submit" value="Submit" class="submit-button" />
-          </form>
-      
-          <div style="clear: both;"></div>
+</div><!-- projects -->
     
-        </div><!-- connect -->
+<div id="connect" class="connect-band">
+  <div class="row">
+    <div class="small-12 medium-5 columns connect-links">
+      <p class="connect-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, error, quo dolorem vero magnam ea adipisci deleniti maxime facilis doloremque numquam aliquam quos beatae minima nostrum labore autem sapiente distinctio molestiae perspiciatis repellendus nemo amet pariatur porro reprehenderit in soluta.
+      </p>
+      
+          <i class="ion-social-github"></i>      
         
-      </div><!-- row -->
-    </div><!-- branding-band -->
+          <i class="ion-social-twitter"></i>
+        
+          <i class="ion-ios7-email"></i>
+
+    </div>
+    <div class="small-12 medium-5 columns connect-form">
+  
+      <form method="post" action="contactengine.php">
+        <label for="Name">Name:</label>
+        <input type="text" name="Name" id="Name" />
+        
+        <label for="City">City:</label>
+        <input type="text" name="City" id="City" />
+  
+        <label for="Email">Email:</label>
+        <input type="text" name="Email" id="Email" />
+        
+        <label for="Message">Message:</label><br />
+        <textarea name="Message" rows="20" cols="20" id="Message"></textarea>
+
+        <input type="submit" name="submit" value="Submit" class="submit-button" />
+      </form>
+  
+      <div style="clear: both;"></div>
+
+    </div><!-- connect-form -->
+    
+  </div><!-- row -->
+</div><!-- connect-band -->
