--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -62,7 +62,8 @@
   font-family: $body-font;
   font-weight: $heavy-text;
   color: $black;
-  font-size: 1.75rem;
+  font-size: 2.45rem;
+  margin-bottom: 0;
 }
 
 .projects-single-teaser {
@@ -73,6 +74,24 @@
   @media only screen and (min-width: 40.063em) and (max-width: 64em) {
     @include medium-text;
   }
+}
+
+.detail-tech {
+  margin-bottom: 1rem;
+}
+
+ul.detail-tech-phases {
+  margin-bottom: 0;
+  li {
+    margin-bottom: 0;
+  }
+  p {
+    margin-bottom: 0;
+  }
+}
+
+.detail-tech-list {
+  @extend .detail-tech-phases;
 }
 
 // contact 
