reformatted typography and projects for mobile

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,20 +7,20 @@ title: Timothy Voice
 <div class="branding-band">
   <div class="row">
     <div id="splash" class="small-12 medium-12 large-12 columns branding">
-      <div class="fixer">
-        <div class="branding-intro small-12 medium-4 large-4 columns">
-        <h1 class="branding-title">
+        <div class="branding-intro small-10 medium-5 large-5 columns">
+        <h1 class="show-for-medium-up branding-title">
           Timothy<br>Voice
+        </h1>
+        <h1 class="show-for-small-only branding-title">
+          Timothy Voice
         </h1>
         <p class="branding-byline">
           concept code content
         </p>
         <p class="branding-summary">
-          I am a Brooklyn based designer/developer passionate about clean readable code powering clean, readable content. If you would like to know how I work, checkout my <a href="#">Playbook</a>.
-          If you'd like to see my <a href="#projects">past work</a> read on.
+          I am a Brooklyn based designer/developer passionate about clean readable code powering clean, readable content.
         </p>
       </div><!-- branding-intro -->
-      </div>
     </div><!-- Branding -->
   </div>
 </div>
@@ -38,7 +38,7 @@ title: Timothy Voice
   <div class="row">
     <div class="small-12 medium-5 columns connect-links">
       <p class="connect-text">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, error, quo dolorem vero magnam ea adipisci deleniti maxime facilis doloremque numquam aliquam quos beatae minima nostrum labore autem sapiente distinctio molestiae perspiciatis repellendus nemo amet pariatur porro reprehenderit in soluta.
+        
       </p>
       
           <i class="ion-social-github"></i>      
