--- a/source/_ggs.erb
+++ b/source/_ggs.erb
@@ -1,81 +1,89 @@
 ---
-
+title: Great Green Sources
 ---
 
 <div class="projects-ggs-band clearfix">
-    <div class="small-12 medium-12 large-12 columns projects-container ggs">
-        <div class="row projects-ggs">
-          <div class="projects-single">
-            <div class="projects-single-container clearfix">
-              
-              <div class="show-for-medium-up medium-5 large-5 columns projects-summary">
-                
-                <h3 class="projects-single-title">
-                  Great Green Sources
-                </h3>
-
-                <div class="detail-tech alpha clearfix">
-                    <ul class="detail-tech-phases">        
-                      <li class="detail-tech-phases">
-                        <p class="projects-single-role">Role:</p>
-                      </li> 
-                      <li class="detail-tech-phases">concept</li>
-                      <li class="detail-tech-phases">design</li>
-                      <li class="detail-tech-phases">development</li>
-                      <li class="detail-tech-phases">deployment</li>          
-                    </ul>
-
-                    <ul class="detail-tech-list tags clearfix">          
-                      <li class="detail-tech-phases">
-                        <p class="projects-single-role">Tools:</p>
-                      </li> 
-                      <li class="tag">HTML/Sass/JS</li>
-                      <li class="tag">Foundation</li>
-                      <li class="tag">Wordpress</li>
-                    </ul> 
-                
-                </div><!-- detail-tech -->
-
-
-                <p class="detail-text">
-                  Great Green Sources is a nationwide wholesale nursery distributor built on creating and maintaining close personal relationships. Part of that process is providing timely information on product availabilities, and introducing customers to a hand picked list of vendors and their products. 
-                </p>
-                <p class="detail-text">
-                  Mobility is a key feature of the site, as Great Green Sources customers are rarely at a desktop. Thus, the site was designed with a mobile first approach, interchanging content based on the context. 
-                </p>                
-
-                    <a href="https://github.com/timsvoice/great_green_sources" class="small button secondary">View Source</a>
-
-                <div class="small button secondary inactive">under construction</div>                                              
-              
-              </div>
-     
-              
-              <div class="small-12 medium-7 large-7 columns">
-                <div id="ggs-carousel" class="owl-carousel mockup">      
-     
-                  <div class="item">
-                    <div class="mockup-image">
-                      <div class="small-12 columns">
-                        <%= image_tag 'greatgreensources_color_mockup.png' %>
-                      </div>
-                    </div><!-- mockup-image -->
-                  </div><!-- item -->
-
-                  <div class="item">
-                    <div class="mockup-image">
-                      <div class="small-12 columns">
-                        <%= image_tag 'greatgreensources_color_mockup.png' %>
-                      </div>
-                    </div><!-- mockup-image -->
-                  </div><!-- item -->
-
-                </div><!-- project-carousel-->                
-              </div>
-
-            </div><!-- projects-single-container -->
-          </div><!-- projects-single -->
-        </div><!-- row projects-ggs -->
-      </div><!-- projects-container -->
-    </div><!-- projects-ggs-band -->
+  <div class="projects-container ggs">
+    <div class="row projects-ggs">
+      <div class="projects-single">
+        <div class="projects-single-container clearfix">
+          <div class=" medium-7 large-5 columns projects-summary">
+            <h3 class="projects-single-title">
+              Great Green Sources
+            </h3>
+            <div class="detail-tech alpha clearfix">
+              <ul class="detail-tech-phases">        
+                <li class="detail-tech-phases">
+                  <p class="projects-single-role">Role:</p>
+                </li> 
+                <li class="detail-tech-phases">concept</li>
+                <li class="detail-tech-phases">design</li>
+                <li class="detail-tech-phases">development</li>
+                <li class="detail-tech-phases">deployment</li>          
+              </ul>
+              <ul class="detail-tech-list tags clearfix">          
+                <li class="detail-tech-phases">
+                  <p class="projects-single-role">Tools:</p>
+                </li> 
+                <li class="tag">HTML/Sass/JS</li>
+                <li class="tag">Foundation</li>
+                <li class="tag">Wordpress</li>
+              </ul>                 
+            </div><!-- detail-tech -->
+            <div class="show-for-medium-up project-details">              
+              <p class="detail-text">
+                Great Green Sources is a nationwide wholesale nursery distributor built on creating and maintaining close personal relationships. Part of that process is providing timely information on product availabilities, and introducing customers to a hand picked list of vendors and their products. 
+              </p>
+              <p class="detail-text">
+                Mobility is a key feature of the site, as Great Green Sources customers are rarely at a desktop. Thus, the site was designed with a mobile first approach, interchanging content based on the context. 
+              </p>              
+              <a href="https://github.com/timsvoice/great_green_sources" class="small button secondary">View Source</a>
+              <div class="small button secondary inactive">under construction</div> 
+            </div><!-- project-details -->
+          </div><!-- projects-summary -->    
+          <div class="show-for-small-only project-small-image">
+            <div class="mockup-image">
+                <%= image_tag 'greatgreensources_banner.png' %>
+            </div><!-- mockup-image -->
+          </div><!-- project-small-image -->
+          <div class="mockup-container small-12 medium-5 large-7 columns">                            
+            <div class="show-for-medium-only">
+                <div class="mockup-image">
+                  <div class="small-12 columns">
+                    <%= image_tag 'greatgreensources_ipad.png' %>
+                  </div>
+                </div><!-- mockup-image -->
+            </div>              
+            <div id="ggs-carousel" class="show-for-large-up owl-carousel mockup">         
+              <div class="item">
+                <div class="mockup-image">
+                  <div class="small-12 columns">
+                    <%= image_tag 'greatgreensources_color_mockup.png' %>
+                  </div>
+                </div><!-- mockup-image -->
+              </div><!-- item -->            
+              <div class="item">
+                <div class="mockup-image">
+                  <div class="small-12 columns">
+                    <%= image_tag 'greatgreensources_ipad.png' %>
+                  </div>
+                </div><!-- mockup-image -->
+              </div><!-- item -->          
+              <div class="item">
+                <div class="mockup-image">
+                  <div class="small-12 columns">
+                    <%= image_tag 'greatgreensources_iphone.png' %>
+                  </div>
+                </div><!-- mockup-image -->
+              </div><!-- item -->
+            </div><!-- project-carousel-->
+            <div class="show-for-small-only project-links-small">
+              <div class="small expand button secondary inactive">under construction</div>
+            </div> 
+          </div><!-- mockup-container -->             
+        </div><!-- projects-single-container -->
+      </div><!-- projects-single -->
+    </div><!-- row projects-ggs -->
+  </div><!-- projects-container -->
+</div><!-- projects-ggs-band -->
 
