--- a/source/stylesheets/modules/_mixins.scss
+++ b/source/stylesheets/modules/_mixins.scss
@@ -1,6 +1,36 @@
+/* ============================ 
+  Media Queries
+============================ */
+
+@mixin breakpoint($point) {
+  @if $point == xxlarge {
+    @media only screen and (min-width: 120.063em) { @content; }
+  }
+  @else if $point == xlarge {
+    @media only screen and (max-width: 90.063em) { @content; }
+  }
+  @else if $point == large {
+    @media only screen and (min-width: 64.063em) { @content; }
+  }
+  @else if $point == medium {
+    @media only screen and (min-width: 47.063em) { @content; }
+  }
+  @else if $point == small {
+    @media only screen and (max-width: 47em) { @content; }
+  }
+}
+
+/* ============================ 
+  Typography
+============================ */
+
 @mixin medium-text() {
   font-size: 0.85rem;
 }
+
+/* ============================ 
+  Borders
+============================ */
 
 @mixin border-light($color, $width: 0.0675rem) {
   border: $width $color solid;
