--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -5,28 +5,35 @@
 .branding-title {
   margin-bottom: 0;
   font-family: $body-font;
-  font-size: 6rem;
-  line-height: 6rem;
+  font-size: 3.75rem;
+  line-height: 3.75rem;
   font-weight: $heavy-text;
   text-align: right;
-  @media only screen and (max-width: 40em) { 
-    font-size: 5rem / 2;
+  @include breakpoint(large) {
+    font-size: 6rem;
+    line-height: 6rem;
   }
-}
-
-.indent {
-  padding-left: 6rem * 1.25;
-  @media only screen and (max-width: 40em) { 
-    padding-left: (6rem * 1.25) / 2;
+  @include breakpoint(medium) {
+    font-size: 4.5rem;
+    line-height: 4.5rem;    
+  }
+  @include breakpoint(small) {
+    text-align: left;
   }
 }
 
 .branding-byline {
-  font-size: 2.55rem;
+  font-size: 1.5rem;
   font-weight: $light-text;
   text-align: right;
-  @media only screen and (max-width: 40em) { 
-    font-size: 1.41rem;
+  @include breakpoint(medium) {
+    font-size: 1.75rem;
+    text-align: right;    
+  }
+  @include breakpoint(small) {
+    font-weight: $medium-text;
+    font-size: 1.5rem;
+    text-align: left;
   }
 }
 
@@ -39,6 +46,13 @@
     color: inherit;
     font-weight: $medium-text;
     text-decoration: underline;
+  }
+  @include breakpoint(large) {
+    font-size: 1.1rem;
+  }
+  @include breakpoint(small) {
+    text-align: left;
+    font-size: 1.25rem;
   }
 }
 
@@ -64,6 +78,12 @@
   color: $black;
   font-size: 2.45rem;
   margin-bottom: 0;
+  @include breakpoint(medium) {
+    font-size: 2rem;
+  }
+  @include breakpoint(small) {
+    font-size: 2rem;
+  }
 }
 
 .projects-single-teaser {
@@ -78,15 +98,24 @@
 
 .detail-tech {
   margin-bottom: 1rem;
+  font-family: $text-font;  
 }
 
 ul.detail-tech-phases {
-  margin-bottom: 0;
+  margin-bottom: 0;  
   li {
     margin-bottom: 0;
+    font-weight: $light-text;
   }
   p {
     margin-bottom: 0;
+    font-weight: $light-text;
+    color: $black;
+  }
+  @include breakpoint(small) {
+    p, li {
+      font-size: 0.8rem;
+    }
   }
 }
 
@@ -157,7 +186,6 @@ ul.detail-tech-phases {
 .detail-text {
   font-family: $text-font;
   font-weight: $light-text;
-  font-size: 1rem;
 }
 
 .tags > .tag {
