--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,19 +7,23 @@ title: Timothy Voice
 <div class="branding-band">
   <div class="row">
     <div id="splash" class="small-12 medium-12 large-12 columns branding">
-        <div class="branding-intro small-10 medium-5 large-5 columns">
-        <h1 class="show-for-medium-up branding-title">
-          Timothy<br>Voice
-        </h1>
-        <h1 class="show-for-small-only branding-title">
+      <div class="branding-intro">
+        <h1 class="branding-title">
           Timothy Voice
         </h1>
-        <p class="branding-byline">
+          <p class="branding-byline">
           concept code content
         </p>
-        <p class="branding-summary">
-          I am a Brooklyn based designer/developer passionate about clean readable code powering clean, readable content.
-        </p>
+        <div class="small-10 medium-5 column alpha">
+          <p class="branding-summary">
+            I am a Brooklyn based designer / developer passionate about clean readable code powering clean, readable content.
+          </p>
+          <!-- <div class="contact">
+            <i class="ion-social-github"></i>              
+            <i class="ion-social-twitter"></i>        
+            <i class="ion-ios7-email"></i>
+          </div> -->
+        </div>
       </div><!-- branding-intro -->
     </div><!-- Branding -->
   </div>
