updates to images and headings

--- a/source/_ggs.erb
+++ b/source/_ggs.erb
@@ -7,10 +7,27 @@ title: Great Green Sources
     <div class="row projects-ggs">
       <div class="projects-single">
         <div class="projects-single-container clearfix">
-          <div class=" medium-7 large-5 columns projects-summary">
-            <h3 class="projects-single-title">
-              Great Green Sources
-            </h3>
+          
+          <div class="projects-single-banner">
+            <%= image_tag 'greatgreensources_text.png' %>
+          </div>
+          
+          <div class="projects-single-hero">
+            <%= image_tag 'greatgreensources_full_mockup_sliced.png' %>
+          </div>
+          
+          <div class=" medium-7 large-7 columns projects-summary alpha">                                  
+            <div class="show-for-medium-up project-details">              
+              <p class="detail-text">
+                Great Green Sources is a nationwide wholesale nursery distributor built on creating and maintaining close personal relationships. Part of that process is providing timely information on product availabilities, and introducing customers to a hand picked list of vendors and their products. 
+              </p>
+              <p class="detail-text">
+                Mobility is a key feature of the site, as Great Green Sources customers are rarely at a desktop. Thus, the site was designed with a mobile first approach, interchanging content based on the context. 
+              </p>              
+            </div><!-- project-details -->
+          </div><!-- projects-summary -->            
+          
+          <div class="mockup-container small-12 medium-5 large-5 columns">                
             <div class="detail-tech alpha clearfix">
               <ul class="detail-tech-phases">        
                 <li class="detail-tech-phases">
@@ -29,58 +46,11 @@ title: Great Green Sources
                 <li class="tag">Foundation</li>
                 <li class="tag">Wordpress</li>
               </ul>                 
-            </div><!-- detail-tech -->
-            <div class="show-for-medium-up project-details">              
-              <p class="detail-text">
-                Great Green Sources is a nationwide wholesale nursery distributor built on creating and maintaining close personal relationships. Part of that process is providing timely information on product availabilities, and introducing customers to a hand picked list of vendors and their products. 
-              </p>
-              <p class="detail-text">
-                Mobility is a key feature of the site, as Great Green Sources customers are rarely at a desktop. Thus, the site was designed with a mobile first approach, interchanging content based on the context. 
-              </p>              
+            </div><!-- detail-tech -->                                      
               <a href="https://github.com/timsvoice/great_green_sources" class="small button secondary">View Source</a>
-              <div class="small button secondary inactive">under construction</div> 
-            </div><!-- project-details -->
-          </div><!-- projects-summary -->    
-          <div class="show-for-small-only project-small-image">
-            <div class="mockup-image">
-                <%= image_tag 'greatgreensources_banner.png' %>
-            </div><!-- mockup-image -->
-          </div><!-- project-small-image -->
-          <div class="mockup-container small-12 medium-5 large-7 columns">                            
-            <div class="show-for-medium-only">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'greatgreensources_ipad.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-            </div>              
-            <div id="ggs-carousel" class="show-for-large-up owl-carousel mockup">         
-              <div class="item">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'greatgreensources_color_mockup.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-              </div><!-- item -->            
-              <div class="item">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'greatgreensources_ipad.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-              </div><!-- item -->          
-              <div class="item">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'greatgreensources_iphone.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-              </div><!-- item -->
-            </div><!-- project-carousel-->
-            <div class="show-for-small-only project-links-small">
-              <div class="small expand button secondary inactive">under construction</div>
-            </div> 
-          </div><!-- mockup-container -->             
+              <div class="small button secondary inactive">under construction</div>  
+          </div><!-- mockup-container -->
+
         </div><!-- projects-single-container -->
       </div><!-- projects-single -->
     </div><!-- row projects-ggs -->
