--- a/source/stylesheets/partials/_buttons.scss
+++ b/source/stylesheets/partials/_buttons.scss
@@ -24,3 +24,12 @@
     cursor: default;
   }
 }
+
+.connect-links {
+  i {
+    &:hover {
+      color: $white;
+      @include transition(200ms, color);
+    }
+  }
+}
