--- a/source/stylesheets/partials/_project.scss
+++ b/source/stylesheets/partials/_project.scss
@@ -6,6 +6,15 @@
   background: $white;
 }
 
+.projects-single-banner {
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+}
+
+.projects-single-hero {
+  margin-bottom: 2rem;
+}
+
 .mockup-image, .detail-container {
   padding-top: 2rem;
   background: $white;
