--- a/source/_octavejournal.erb
+++ b/source/_octavejournal.erb
@@ -7,11 +7,27 @@ title: Octave Journal
     <div class="row projects-octavejournal">
       <div class="projects-single">
         <div class="projects-single-container clearfix">
-          <div class=" medium-7 large-5 columns projects-summary">
-            <h3 class="projects-single-title">
-              Octave Journal
-            </h3>
-            <div class="detail-tech alpha clearfix">
+          
+          <div class="projects-single-banner">
+            <%= image_tag "octavejournal_text.png" %>
+          </div>
+          
+          <div class="projects-single-hero">
+            <%= image_tag 'octavejournal_full_mockup_sliced.png' %>
+          </div>
+
+          <div class=" medium-7 large-7 columns projects-summary alpha">            
+            <div class="show-for-medium-up project-details">              
+              <p class="detail-text">
+                The Octave Journal is an internal publication, serving as a knowledge base for a geographically dispersed team. The Journal started out as an experimental project and is now edited and maintained by a core team based in Shanghai and New York. 
+              </p>
+              <p class="detail-text">
+                 The Octave Journal is published via bi-monthly, custom coded email campaign. We consistently drove up our readership numbers Using Mailchimp and Google Analytics data. 
+              </p>                            
+            </div><!-- project-details -->
+          </div><!-- projects-summary -->    
+          
+          <div class="mockup-container small-12 medium-5 large-5 columns">  <div class="detail-tech alpha clearfix">
               <ul class="detail-tech-phases">        
                 <li class="detail-tech-phases">
                   <p class="projects-single-role">Role:</p>
@@ -21,7 +37,6 @@ title: Octave Journal
                 <li class="detail-tech-phases">development</li>
                 <li class="detail-tech-phases">deployment</li>        
                 <li class="detail-tech-phases">content</li>          
-         
               </ul>
               <ul class="detail-tech-list tags clearfix">          
                 <li class="detail-tech-phases">
@@ -32,57 +47,9 @@ title: Octave Journal
                 <li class="tag">Wordpress</li>
                 <li class="tag">Ink</li>
               </ul>                 
-            </div><!-- detail-tech -->
-            <div class="show-for-medium-up project-details">              
-              <p class="detail-text">
-                The Octave Journal is an internal publication, serving as a knowledge base for a geographically dispersed team. The Journal started out as an experimental project and is now edited and maintained by a core team based in Shanghai and New York. 
-              </p>
-              <p class="detail-text">
-                 The Octave Journal is published via bi-monthly, custom coded email campaign. We consistently drove up our readership numbers Using Mailchimp and Google Analytics data. 
-              </p>              
-              <a href="https://github.com/timsvoice/great_green_sources" class="small button secondary">View Source</a>
+            </div><!-- detail-tech -->                                        
+            <a href="https://github.com/timsvoice/great_green_sources" class="small button secondary">View Source</a>
               <a href="www.octavejournal.com" class="small button secondary">View Project</a>
-            </div><!-- project-details -->
-          </div><!-- projects-summary -->    
-          <div class="show-for-small-only project-small-image">
-            <div class="mockup-image">
-                <%= image_tag 'octavejournal_imac.png' %>
-            </div><!-- mockup-image -->
-          </div><!-- project-small-image -->
-          <div class="mockup-container small-12 medium-5 large-7 columns">                            
-            <div class="show-for-medium-only">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'octavejournal_ipad.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-            </div>              
-            <div id="octave-carousel" class="show-for-large-up owl-carousel mockup">         
-              <div class="item">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'octavejournal_imac.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-              </div><!-- item -->            
-              <div class="item">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'octavejournal_ipad.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-              </div><!-- item -->          
-              <div class="item">
-                <div class="mockup-image">
-                  <div class="small-12 columns">
-                    <%= image_tag 'octavejournal_iphone.png' %>
-                  </div>
-                </div><!-- mockup-image -->
-              </div><!-- item -->
-            </div><!-- project-carousel-->
-            <div class="show-for-small-only project-links-small">
-              <a href="www.octavejournal.com" class="small button secondary">View Project</a>
-            </div> 
           </div><!-- mockup-container -->             
         </div><!-- projects-single-container -->
       </div><!-- projects-single -->
