--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -40,7 +40,7 @@ title: Timothy Voice
     
 <div id="connect" class="connect-band">
   <div class="row">
-    <div class="small-12 medium-5 columns connect-links">
+    <div class="small-12 columns connect-links">
       <p class="connect-text">
         
       </p>
@@ -52,27 +52,6 @@ title: Timothy Voice
           <i class="ion-ios7-email"></i>
 
     </div>
-    <div class="small-12 medium-5 columns connect-form">
-  
-      <form method="post" action="contactengine.php">
-        <label for="Name">Name:</label>
-        <input type="text" name="Name" id="Name" />
-        
-        <label for="City">City:</label>
-        <input type="text" name="City" id="City" />
-  
-        <label for="Email">Email:</label>
-        <input type="text" name="Email" id="Email" />
-        
-        <label for="Message">Message:</label><br />
-        <textarea name="Message" rows="20" cols="20" id="Message"></textarea>
-
-        <input type="submit" name="submit" value="Submit" class="submit-button" />
-      </form>
-  
-      <div style="clear: both;"></div>
-
-    </div><!-- connect-form -->
     
   </div><!-- row -->
 </div><!-- connect-band -->
