--- a/source/stylesheets/partials/_typography.scss
+++ b/source/stylesheets/partials/_typography.scss
@@ -8,11 +8,11 @@
   font-weight: $heavy-text;
   text-align: left;
   text-transform: uppercase;
+  font-size: 6rem;
   @include breakpoint(large) {
-    font-size: 5rem;
+    font-size: 6rem;
   }
   @include breakpoint(medium) {
-    font-size: 6rem;
     text-transform: capitalize;   
   }
   @include breakpoint(small) {
@@ -177,6 +177,13 @@ ul.detail-tech-phases {
   i {
     font-size: 4rem;
     text-align: center;
+  }
+}
+
+.connect-links {
+  text-align: center;
+  i {
+    margin-right: 2rem;
   }
 }
 
