--- a/source/stylesheets/partials/_navigation.scss
+++ b/source/stylesheets/partials/_navigation.scss
@@ -15,6 +15,7 @@
 .top-bar-section {
   ul, li:not(.has-form) a:not(.button), ul li > a {
     background: inherit;
+    line-height: 2.5rem;
     &:hover {
       background: inherit;
     }
@@ -23,4 +24,26 @@
 
 .nav-down {
   bottom: -3.75rem;
+}
+
+.top-bar.playbook {
+  height: 2.5rem;
+}
+
+.playbook .top-bar-section {
+  padding-top: 0;
+}
+
+.f-topbar-fixed {
+  padding-top: 2.5rem !important;
+}
+
+//side nav
+
+.side-nav {
+}
+
+.sidebar {
+  background: $branding-accent;
+  padding: 0 1rem;
 }
